@@ -71,6 +71,7 @@ if { [istarget m68*-*-*] || [istarget fido*-*-*] } then {
 
     if { [istarget *-*-netbsd] } then {
       run_dump_test p3041
+      run_dump_test p3041data
     }
 
     set testname "68000 operands"
