@@ -1,3 +1,12 @@
+2009-10-13  Vincent Riviere  <vincent.riviere@freesbee.fr>	
+
+	PR gas/3041
+	* gas/m68k/all.exp: Added "p3041data".
+	* gas/m68k/p3041.d, gas/m68k/p3041.s: Added tests of weak references
+	from text section to all possible sections.
+	* gas/m68k/p3041data.d, gas/m68k/p3041data.s: New test. Check weak
+	references from data section.
+
 2009-10-08  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR gas/10704
